--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@types/react-dom": "^19.1.8",
     "astro": "^5.13.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "sharp": "^0.34.2"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
