--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Performance & Completeness */
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["astro/client", "three", "node", "react", "react-dom"]
   }
 }
